--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@based/db-query": "v2.0.0-alpha.23",
     "@based/client": "^4.7.6",
-    "@based/schema": "2.2.6",
+    "@based/schema": "^2.2.8",
     "@saulx/diff": "^1.1.4",
     "@saulx/hash": "^2.0.0",
     "@saulx/utils": "^3.5.3",
