--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@based/react",
-  "version": "4.6.1",
+  "version": "5.0.0",
   "license": "MIT",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "browser": "npx aristotle watch -t ./test/browser.tsx",
@@ -18,13 +19,13 @@
     "@types/react": "^18.0.29",
     "rimraf": "^3.0.2",
     "ts-node": "10.9.1",
-    "typescript": "^4.3.5",
+    "typescript": "^5.2.2",
     "react-dom": "^18.2.0",
     "@saulx/aristotle": "^4.7.1",
     "@based/client": "^4.8.10"
   },
   "peerDependencies": {
-    "@based/client": "^4.8.10",
+    "@based/client": "*",
     "react": "16||17||18"
   }
 }
