--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist"
