--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,7 +22,8 @@
     "node_modules-path": "^2.0.7",
     "get-port": "^5.1.1",
     "mkdirp": "^1.0.4",
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "@based/db-server-linux-x64": "2.0.0-alpha.24b"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
@@ -31,7 +32,6 @@
     "rimraf": "^3.0.2"
   },
   "optionalDependencies": {
-    "@based/db-server-linux-x64": "2.0.0-alpha.24",
     "@based/db-server-darwin-x64": "2.0.0-alpha.24",
     "@based/db-server-darwin-arm64": "2.0.0-alpha.24"
   }
