--- a/packages/server/selvad-packages/linux-x64/package.json
+++ b/packages/server/selvad-packages/linux-x64/package.json
@@ -1,17 +1,11 @@
 {
   "name": "@based/db-server-linux-x64",
-  "version": "2.0.0-alpha.24",
+  "version": "2.0.0-alpha.24b",
   "description": "The Linux 64-bit binary for db-server.",
   "homepage": "https://github.com/atelier-saulx/based-db#readme",
   "license": "MIT",
   "preferUnplugged": true,
   "engines": {
     "node": ">=18"
-  },
-  "os": [
-    "linux"
-  ],
-  "cpu": [
-    "x64"
-  ]
+  }
 }
