--- a/selvad/modules/server/Makefile
+++ b/selvad/modules/server/Makefile
@@ -1,10 +1,10 @@
-# Copyright (c) 2022-2023 SAULX
+# Copyright (c) 2022-2024 SAULX
 # SPDX-License-Identifier: MIT
 
 OBJ := \
 	   conn.o \
-	   message.o \
 	   message_buf.o \
+	   message_none.o \
 	   message_sock.o \
 	   pubsub.o \
 	   selva_send.o \
