WIP: More ESM updates

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,8 +5,13 @@
     "target": "es2021",
     "esModuleInterop": true,
   },
+  "include": [
+    "src",
+    "test"
+  ],
   "exclude": [
     "dist",
-    "tmp"
+    "tmp",
+    "scripts"
   ]
 }
