--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,7 @@
   "name": "@based/db-server",
   "version": "2.0.0-alpha.23",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "build": "npx tsc",
     "watch": "npm run build -- --watch",
@@ -15,6 +15,7 @@
     "selvad/*",
     "!selvad/local"
   ],
+  "type": "module",
   "dependencies": {
     "@saulx/diff": "^1.1.4",
     "@saulx/utils": "^3.2.2",
