--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,13 +9,13 @@
     "clean": "rimraf {.turbo,dist,node_modules}"
   },
   "sideEffects": false,
+  "type": "module",
   "files": [
-    "dist",
-    "!dist/**/*.js.map",
+    "dist/src",
+    "!dist/src/**/*.js.map",
     "selvad/*",
     "!selvad/local"
   ],
-  "type": "module",
   "dependencies": {
     "@saulx/diff": "^1.1.4",
     "@saulx/utils": "^3.2.2",
@@ -23,12 +23,13 @@
     "node_modules-path": "^2.0.7",
     "get-port": "^5.1.1",
     "mkdirp": "^1.0.4",
-    "chalk": "^4.1.0"
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
+    "@saulx/tsconfig": "^1.0.6",
     "@types/node": "^17.0.23",
     "ts-node": "10.9.1",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "rimraf": "^3.0.2"
   },
   "optionalDependencies": {
