WIP: more ESM fixes

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "target": "es2021",
     "esModuleInterop": true,
+    "composite": true
   },
   "include": [
     "src",
