--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "dist/src/index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --build",
     "watch": "npm run build -- --watch",
     "clean": "rimraf {.turbo,dist,node_modules}",
     "test": "FORCE_COLOR=1 ava --color --node-arguments='--expose-gc' --timeout 3m --verbose",
