Refactor io handling
- Move the functionality of `replication` to `io` and remove the former
  module
- Move all sdb dump handling from `db` to `io`

--- a/selvad/modules/io/Makefile
+++ b/selvad/modules/io/Makefile
@@ -1,10 +1,17 @@
-# Copyright (c) 2022-2023 SAULX
+# Copyright (c) 2022-2024 SAULX
 # SPDX-License-Identifier: MIT
 
 SELVA_DB_VERSION := $(shell sh -c 'git rev-parse --verify HEAD')
 OBJ := \
+	   dump.o \
 	   io.o \
 	   myreadlink.o \
+	   replication/eid.o \
+	   replication/origin/replica_thread.o \
+	   replication/origin/replication.o \
+	   replication/origin/ring_buffer.o \
+	   replication/replica/replication.o \
+	   replication/replication.o \
 	   sdb.o \
 	   version.o
 DEP := $(OBJ:%.o=%.d)
