--- a/packages/subs/package.json
+++ b/packages/subs/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "watch": "npm run build -- --watch",
     "clean": "rimraf {.turbo,dist,node_modules}",
-    "test": "ava --color --node-arguments='--expose-gc' --timeout 3m --verbose"
+    "test": "FORCE_COLOR=1 ava --color --timeout 3m --verbose",
+    "test-ci": "FORCE_COLOR=1 ava --color --concurrency 1 --timeout 3m"
   },
   "files": [
     "dist/src",
