--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,8 +33,8 @@
     "rimraf": "^3.0.2"
   },
   "optionalDependencies": {
-    "@based/db-server-linux-x64": "v2.0.0-alpha.23",
-    "@based/db-server-darwin-x64": "v2.0.0-alpha.23",
-    "@based/db-server-darwin-arm64": "v2.0.0-alpha.23"
+    "@based/db-server-linux-x64": "2.0.0-alpha.23",
+    "@based/db-server-darwin-x64": "2.0.0-alpha.23",
+    "@based/db-server-darwin-arm64": "2.0.0-alpha.23"
   }
 }
