--- a/selvad/src/Makefile
+++ b/selvad/src/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2022-2023 SAULX
+# Copyright (c) 2022-2024 SAULX
 # SPDX-License-Identifier: MIT
 
 include ../common.mk
@@ -7,6 +7,7 @@ OBJ := \
 	   config.o \
 	   event_loop.o \
 	   heap.o \
+	   langs.o \
 	   main.o \
 	   module.o \
 	   promise.o \
