--- a/selvad/.gitignore
+++ b/selvad/.gitignore
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 SAULX
+# Copyright (c) 2022, 2024 SAULX
 # SPDX-License-Identifier: MIT
 /selvad
 *.d
@@ -6,6 +6,7 @@
 *.so.*
 *.o
 *.dylib
+vgcore.*
 /binaries
 # Selva db dumps
 *.sdb
