--- a/packages/subs/package.json
+++ b/packages/subs/package.json
@@ -24,10 +24,10 @@
     ]
   },
   "dependencies": {
-    "@based/db-client": "2.0.0-alpha.23"
+    "@based/db-client": "^2.0.1"
   },
   "devDependencies": {
-    "@based/db-server": "2.0.0-alpha.23",
+    "@based/db-server": "*",
     "get-port": "^5.1.1",
     "@types/node": "^17.0.23",
     "ava": "5.3.1",
