--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "type-fest": "^3.12.0",
+    "@saulx/tsconfig": "^1.1.0",
     "ts-node": "10.9.1",
     "typescript": "^5.1.6",
     "rimraf": "^3.0.2",
