--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@based/schema",
-  "version": "2.5.3",
+  "version": "2.6.0",
   "license": "MIT",
   "main": "dist/src/index.js",
   "files": [
     "dist",
+    "README.md",
+    "package.json",
     "!dist/**/*.js.map"
   ],
   "scripts": {
