--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,7 +49,7 @@ jobs:
           key: ${{ runner.os }}-${{ runner.arch }}-npm-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: ${{ steps.cache-npm-try.outputs.cache-hit != 'true' }}
-        run: npm ci
+        run: npm ci --include=optional
       - run: ls -la ./node_modules
       - name: Build based-db
         run: npm run build
