Rename find_index as selva_index

--- a/selvad/modules/db/Makefile
+++ b/selvad/modules/db/Makefile
@@ -7,9 +7,9 @@ OBJ := \
 	   db.o \
 	   edge/edge.o \
 	   edge/edge_constraint.o \
-	   find_index/find_index.o \
-	   find_index/icb.o \
-	   find_index/pick_icb.o \
+	   field_lookup/data_field.o \
+	   field_lookup/inherit_field.o \
+	   field_lookup/traversable.o \
 	   hierarchy/field_set.o \
 	   hierarchy/hierarchy.o \
 	   hierarchy/hierarchy_detached.o \
@@ -18,6 +18,9 @@ OBJ := \
 	   hierarchy/traversal.o \
 	   hierarchy/traversal_order.o \
 	   hierarchy/types.o \
+	   index/icb.o \
+	   index/index.o \
+	   index/pick_icb.o \
 	   modify.o \
 	   parsers/enum.o \
 	   parsers/index_hints.o \
@@ -33,9 +36,6 @@ OBJ := \
 	   query/find/find_send_node_merge.o \
 	   query/find/inherit.o \
 	   query/find/inherit_send_field.o \
-	   field_lookup/data_field.o \
-	   field_lookup/inherit_field.o \
-	   field_lookup/traversable.o \
 	   query/query_traverse.o \
 	   query/update.o \
 	   resolve.o \
