Changes errors package to work like package/server

--- a/packages/errors/tsconfig.json
+++ b/packages/errors/tsconfig.json
@@ -6,6 +6,11 @@
     "allowJs": true,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["./src"],
-  "exclude": ["./dist"]
+  "include": [
+    "./src",
+    "./test"
+  ],
+  "exclude": [
+    "./dist"
+  ]
 }
