--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -7,12 +7,21 @@
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "watch": "npx tsc --watch",
+    "test": "npx ava",
     "clean": "rimraf {.turbo,dist,node_modules}"
   },
   "sideEffects": false,
+  "ava": {
+    "timeout": "2m",
+    "workerThreads": false,
+    "files": [
+      "./dist/test/**/*.js"
+    ]
+  },
   "dependencies": {},
   "devDependencies": {
     "ts-node": "10.9.1",
+    "ava": "5.3.1",
     "typescript": "^4.3.5",
     "rimraf": "^3.0.2"
   }
