--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/errors",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "type": "module",
   "main": "./dist/src/index.js",
@@ -18,6 +18,11 @@
       "./dist/test/**/*.js"
     ]
   },
+  "files": [
+    "dist/src",
+    "README.md",
+    "package.json"
+  ],
   "dependencies": {},
   "devDependencies": {
     "ts-node": "10.9.1",
