--- a/packages/subs/package.json
+++ b/packages/subs/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@based/db-server": "*",
+    "@based/schema": "*",
     "get-port": "^5.1.1",
     "@types/node": "^17.0.23",
     "ava": "6.1.1",
