@based/client@5.3.0 @based/server@7.1.0 @based/functions@3.0.1

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/server",
-  "version": "7.1.0-alpha",
+  "version": "7.1.0",
   "license": "MIT",
   "main": "./dist/index.js",
   "type": "module",
@@ -24,7 +24,7 @@
     "jsonexport": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.31",
-    "@based/functions": "^3.0.0",
+    "@based/functions": "^3.0.1",
     "@based/errors": "^1.0.0"
   },
   "devDependencies": {
