--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/client",
-  "version": "5.3.0-alpha",
+  "version": "5.3.0",
   "license": "MIT",
   "scripts": {
     "build": "npx tsc && cp ./dist/src/index.d.ts ./dist/src/index_original.d.ts",
@@ -51,7 +51,7 @@
     "esbuild": "^0.19.5",
     "@aws-sdk/lib-storage": "^3.304.0",
     "@aws-sdk/client-s3": "^3.304.0",
-    "@based/functions": "^3.0.0",
+    "@based/functions": "^3.0.1",
     "ava": "5.3.1",
     "typescript": "^5.2.2",
     "rimraf": "^3.0.2"
