--- a/packages/client2/package.json
+++ b/packages/client2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@based/db-client",
+  "name": "@based/db-client-2",
   "version": "3.2.0",
   "license": "MIT",
   "main": "dist/src/index.js",
