--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,7 +13,8 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@saulx/hash": "^2.0.0"
+    "@saulx/hash": "^2.0.0",
+    "@based/errors": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.29",
