--- a/packages/lmdb/package.json
+++ b/packages/lmdb/package.json
@@ -24,11 +24,13 @@
     "package.json"
   ],
   "dependencies": {
+    "@saulx/utils": "^4.3.2",
     "node-lmdb": "^0.10.0",
     "@based/server": "^8.0.0",
     "@based/client": "^6.0.0"
   },
   "devDependencies": {
+    "lorem-ipsum": "^2.0.8",
     "ts-node": "10.9.1",
     "ava": "5.3.1",
     "typescript": "^4.3.5",
