--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/errors",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "type": "module",
   "main": "./dist/src/index.js",
@@ -23,7 +23,9 @@
     "README.md",
     "package.json"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@based/functions": "^3.0.1"
+  },
   "devDependencies": {
     "ts-node": "10.9.1",
     "ava": "5.3.1",
