--- a/packages/lmdb/tsconfig.json
+++ b/packages/lmdb/tsconfig.json
@@ -6,12 +6,6 @@
     "allowJs": true,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": [
-    "./src",
-    "./test"
-  ],
-  "exclude": [
-    "./dist/src",
-    "./dist/test"
-  ]
+  "include": ["src", "./test"],
+  "exclude": ["./dist/src", "./dist/test"]
 }
