--- a/selvad/modules/piper/Makefile
+++ b/selvad/modules/piper/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 SAULX
+# Copyright (c) 2023-2024 SAULX
 # SPDX-License-Identifier: MIT
 
 OBJ := \
@@ -6,10 +6,10 @@ OBJ := \
 	   piper.o \
 	   piper_error.o
 DEP := $(OBJ:%.o=%.d)
-LDFLAGS += -lutil -ljemalloc_selva -ldeflate
+LDLIBS := -lutil -ljemalloc_selva -ldeflate
 TARGET := ../mod_piper$(MOD_SUFFIX)
 
 $(TARGET): $(OBJ)
-	$(CC) -o $@ $(LDFLAGS) $^
+	$(CC) -o $@ $(LDFLAGS) $^ $(LDLIBS)
 
 -include $(DEP)
