--- a/selvad/src/Makefile
+++ b/selvad/src/Makefile
@@ -20,7 +20,8 @@ CFLAGS += -fvisibility=hidden \
 		  -include ../include/cdefs.h \
 		  -DEVL_MAIN=1
 
-LDFLAGS += -L ../lib -ljemalloc_selva -lutil -ldeflate
+LDFLAGS += -L ../lib
+LDLIBS := -ljemalloc_selva -lutil -ldeflate
 ifeq ($(uname_S),Linux)
 OBJ += \
 	   linux/poll.o \
@@ -39,6 +40,6 @@ endif
 DEP := $(OBJ:%.o=%.d)
 
 ../selvad: $(OBJ)
-	$(CC) $^ $(LDFLAGS) -o $@
+	$(CC) -o $@ $(LDFLAGS) $^ $(LDLIBS)
 
 -include $(DEP)
