--- a/selvad/tools/perf/Makefile
+++ b/selvad/tools/perf/Makefile
@@ -5,7 +5,8 @@ uname_S := $(shell sh -c 'uname -s 2>/dev/null || echo not')
 OBJ := \
 	   perf.o
 CFLAGS := -Wall -Wextra -Wno-unknown-attributes -g3 -std=gnu2x -pthread -I../../include
-LDFLAGS := -L../../lib -pthread -lm -lutil -ljemalloc_selva -ldeflate
+LDFLAGS := -L../../lib -pthread
+LDLIBS := -lm -lutil -ljemalloc_selva -ldeflate
 ifeq ($(uname_S),Linux)
 LDFLAGS += -Wl,-rpath,'$$ORIGIN'/../../lib
 endif
@@ -14,7 +15,7 @@ LDFLAGS += -Wl,-rpath,@executable_path/../../lib
 endif
 
 perf: $(OBJ)
-	$(CC) $(LDFLAGS) -o $@ $^
+	$(CC) -o $@ $(LDFLAGS) $^ $(LDLIBS)
 
 clean:
 	$(RM) ./perf $(OBJ)
