--- a/selvad/modules/demo_await/Makefile
+++ b/selvad/modules/demo_await/Makefile
@@ -1,9 +1,9 @@
-# Copyright (c) 2022 SAULX
+# Copyright (c) 2022, 2024 SAULX
 # SPDX-License-Identifier: MIT
 
 TARGET := ../mod_demo_async$(MOD_SUFFIX)
 
 $(TARGET): demo.o
-	$(CC) -o $@ $(LDFLAGS) $^
+	$(CC) -o $@ $(LDFLAGS) $^ $(LDIBS)
 
 -include demo.d
