--- a/selvad/modules/io/Makefile
+++ b/selvad/modules/io/Makefile
@@ -18,11 +18,11 @@ OBJ := \
 	   version.o
 DEP := $(OBJ:%.o=%.d)
 CFLAGS += -DSELVA_IO_MAIN=1 -DSELVA_IO_TYPE
-LDFLAGS += -lutil -lsha3iuf -ljemalloc_selva -ldeflate
+LDLIBS := -lutil -lsha3iuf -ljemalloc_selva -ldeflate
 TARGET := ../mod_io$(MOD_SUFFIX)
 
 $(TARGET): $(OBJ)
-	$(CC) -o $@ $(LDFLAGS) $^
+	$(CC) -o $@ $(LDFLAGS) $^ $(LDLIBS)
 
 -include $(DEP)
 
