libdeflate: Provide a wrapper for block streaming

--- a/selvad/lib/deflate/Makefile
+++ b/selvad/lib/deflate/Makefile
@@ -20,6 +20,7 @@ CFLAGS += -fPIC -fvisibility=hidden -I../../include \
 LDFLAGS += -g -L../
 
 OBJ := \
+	lib/block_state.o \
 	lib/deflate_compress.o \
 	lib/deflate_decompress.o \
 	lib/utils.o
