libdeflate: string cmp funcs and retries
Block decompression will fail if the selected max block length is too
small. The data buffer needs to be automatically grown in such case.
Unfortunately, if the buffer is grown then we also have to restart
the whole operation atm.

Implement memcmp() and include() functions for libdeflate.

--- a/selvad/lib/deflate/Makefile
+++ b/selvad/lib/deflate/Makefile
@@ -23,6 +23,7 @@ OBJ := \
 	lib/block_state.o \
 	lib/deflate_compress.o \
 	lib/deflate_decompress.o \
+	lib/strings.o \
 	lib/utils.o
 
 ifeq ($(uname_M),arm64)
