--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "browser": "npx aristotle watch -t ./test/browser.tsx",
-    "server": "npx ts-node-esm ./test/based-server.ts",
     "build": "npx tsc",
+    "server": "npx ts-node-esm ./test/based-server.ts",
+    "browser": "vite -t ./test/browser.tsx",
+
     "watch": "npm run build -- --watch",
     "clean": "rimraf {.turbo,dist,node_modules}"
   },
@@ -22,8 +23,8 @@
     "ts-node": "10.9.1",
     "typescript": "^5.2.2",
     "react-dom": "^18.2.0",
-    "@saulx/aristotle": "^4.7.1",
-    "@based/client": "^5.3.0"
+    "@based/client": "^5.3.0",
+    "vite": "^5.2.8"
   },
   "peerDependencies": {
     "@based/client": "*",
